--- a/src/main/ol/package.json
+++ b/src/main/ol/package.json
@@ -26,6 +26,7 @@
     "color-space": "^2.0.1",
     "earcut": "^2.2.3",
     "geotiff": "^2.0.7",
+    "mongoose": "^8.3.5",
     "pbf": "3.2.1",
     "rbush": "^3.0.1"
   },
