--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-flash": "^0.0.2",
     "mongodb": "^6.6.2",
     "mongoose": "^8.3.5"
   },
@@ -20,4 +21,3 @@
     "@types/webpack-env": "^1.18.5"
   }
 }
-
